--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "pishposh",
   "type": "module",
   "version": "1.0.1",
-  "description": "Signal Framework",
+  "description": "Visual Programming Language",
   "main": "index.js",
   "scripts": {
-    "app": "~/Applications/nwjs-sdk-v0.93.0-linux-x64/nw .",
+    "app": "nw .",
     "web": "http-server -p 8084 -c-1 .",
     "save": "git add .; git commit -m 'Updated Release'; git push; npm version patch; npm publish; git push;"
   },
