--- a/agents/basic/pass-through/manifest.json
+++ b/agents/basic/pass-through/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "basic/pass-through",
+  "id": "basic/pass-through",
   "version": "1.2.3",
   "description": "Applies various image filters with real-time preview and adjustable parameters",
   "author": {
