--- a/agents/basic/connection/manifest.json
+++ b/agents/basic/connection/manifest.json
@@ -87,7 +87,11 @@
       "stability": "stable"
     }
 
+  },
+  "files": {
+    "main": "index.js",
+    "icon": "assets/icon.svg",
+    "documentation": "README.md"
   }
-
 
 }
